// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unhandled Error Transformer Tests When AuthApiError is returned should add Infobox with unexpected error message when error is not provided 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": "oform.error.unexpected",
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When AuthApiError is returned should add infobox with custom message from server 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": "Custom error message",
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When OAuthError is returned should add Infobox with unexpected error message when error is not provided 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": "oform.error.unexpected",
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When OAuthError is returned should add info box when oie configuration error 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": "oie.configuration.error",
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When OAuthError is returned should add info box when oie is not enabled error 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": "oie.feature.disabled",
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When OAuthError is returned should add info box when response is invalid recovery token error 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": "oie.invalid.recovery.token",
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
